src/test/input/codegen/fail/params.c
// Function parameters not matching

int a(int x, int y) {
    return x + y;
}

void main() {
    
    
    a(5);
    
}